fixing alignment for archived post links // #46

--- a/web/layout/primary.less
+++ b/web/layout/primary.less
@@ -491,6 +491,8 @@ h1, h2, h3
 
     div.categoryPosts
     {
+        text-align: left;
+
         position: relative;
         float: left;
 
